<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:text="@string/chart" />

    <ImageView
        android:id="@+id/chart"
        android:layout_width="320dp"
        android:layout_height="248dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="155dp"
        app:srcCompat="@drawable/chart" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="42dp"
        android:text="@string/temperature" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="37dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="0dp"
        android:text="+24" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chart"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        android:text="@string/backToMenu" />


</RelativeLayout>